--- a/views/create.ejs
+++ b/views/create.ejs
@@ -7,12 +7,12 @@
 
 
   <div class="create-blog content">
-    <form>
+    <form action="/blogs" method="post">
       <label for="title">blog title:</label>
-      <input type="text" id="title" required>
+      <input type="text" id="title" name="title" required>
       <label for="snippet">blog snippet:</label>
-      <input type="text" id="snippet" required>
-      <textarea id="body" required></textarea>
+      <input type="text" id="snippet" name="snippet" required>
+      <textarea id="body" name="body" required></textarea>
       <button>Submit</button>
     </form>
   </div>
