--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,21 +1,21 @@
-<html lang="en"></html>
-<%- include('./partials/head.ejs') %>
+<html lang="en">
+<%- include("./partials/head.ejs") %>
+
 <body>
-
-
-  <%- include('./partials/nav.ejs') %>
-
+  <%- include("./partials/nav.ejs") %>
 
   <div class="create-blog content">
-    <form action="/blogs" method="post">
-      <label for="title">blog title:</label>
+    <form action="/blogs" method="POST">
+      <label for="title">Blog title:</label>
       <input type="text" id="title" name="title" required>
-      <label for="snippet">blog snippet:</label>
+      <label for="snippet">Blog snippet:</label>
       <input type="text" id="snippet" name="snippet" required>
+      <label for="body">Blog body:</label>
       <textarea id="body" name="body" required></textarea>
       <button>Submit</button>
     </form>
   </div>
-  <%- include('./partials/footer.ejs') %>
+
+  <%- include("./partials/footer.ejs") %>
 </body>
 </html>
