--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,16 +1,16 @@
-<html lang="en"></html>
-<%- include('./partials/head.ejs') %>
-<body>
-  <%- include('./partials/nav.ejs') %>
+<html lang="en">
+<%- include("./partials/head.ejs") %>
 
+<body>
+  <%- include("./partials/nav.ejs") %>
 
   <div class="about content">
-    <h2>about us</h2>
-    <p>loream ipsu, sit amet consectetur adipisicing elit</p>
-    <p>loream ipsu, sit amet consectetur adipisicing elit</p>
-    <p>loream ipsu, sit amet consectetur adipisicing elit</p>
-
+    <h2>About Us</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
   </div>
-  <%- include('./partials/footer.ejs') %>
+
+  <%- include("./partials/footer.ejs") %>
 </body>
 </html>
